force-app/main/default/objects/Power_Bi_Report__mdt/Power_Bi_Report__mdt.object-meta.xml
<CustomObject>
    <description>Power Bi Report URL</description>
    <label>Power Bi Report</label>
    <pluralLabel>Power Bi Report</pluralLabel>
</CustomObject>