force-app/main/default/objects/Power_Bi_Report__mdt/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <description>HOLDING = for display Product holding page
CSV = For display CSV  and Wealth page</description>
    <label>Report Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>