force-app/main/default/objects/Power_Bi_Report__mdt/fields/ReportId__c.field-meta.xml
<CustomField>
    <fullName>ReportId__c</fullName>
    <description>example:
RP_001</description>
    <label>ReportId</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>