force-app/main/default/objects/Power_Bi_Report__mdt/fields/ReportName__c.field-meta.xml
<CustomField>
    <fullName>ReportName__c</fullName>
    <label>ReportName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>