force-app/main/default/objects/Power_Bi_Report__mdt/fields/URL_Report__c.field-meta.xml
<CustomField>
    <fullName>URL_Report__c</fullName>
    <label>URL Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>